# dtst

./: .env.example  .gitignore  AGENTS.md  README.md  mkdocs.yml  nightmare.sh  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  tests.yml
docs/: concepts.md  getting-started.md  index.md
docs/advanced/: configuration.md  python-api.md  workflows.md
docs/reference/: api.md  cli.md
docs/tutorial/: collecting-images.md  extracting-features.md  final-preparation.md  index.md  selecting-and-refining.md
dtst/: __init__.py  aio.py  cache.py  cli.py  config.py  errors.py  executor.py  face_align.py  files.py  images.py  results.py  sidecar.py  throttle.py  urls.py  user_agent.py
dtst/cli/: __init__.py  config.py
dtst/cli/commands/: analyze.py  annotate.py  augment.py  cluster.py  dedup.py  detect.py  extract_classes.py  extract_faces.py  extract_frames.py  fetch.py  format.py  frame.py  rename.py  review.py  search.py  select.py  upscale.py  validate.py
dtst/commands/: analyze.py  annotate.py  augment.py  cluster.py  copy.py  curate.py  dedup.py  detect.py  extract_classes.py  extract_faces.py  extract_frames.py  fetch.py  filter.py  format.py  frame.py  rename.py  review.py  run.py  search.py  select.py  tag.py  upscale.py  validate.py
dtst/core/: __init__.py  analyze.py  annotate.py  augment.py  cluster.py  dedup.py  detect.py  extract_classes.py  extract_faces.py  extract_frames.py  fetch.py  format.py  frame.py  rename.py  search.py  select.py  upscale.py  validate.py
dtst/curate/: index.html  server.py
dtst/detections/: owlvit.py
dtst/embeddings/: __init__.py  arcface.py  base.py  clip.py
dtst/engines/: __init__.py  base.py  bing.py  brave.py  flickr.py  inaturalist.py  serper.py  wikimedia.py
dtst/metrics/: iqa.py
dtst/review/: index.html  server.py
scripts/: gen_cli_docs.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_dedup.py  test_engines.py  test_extract_frames_logic.py  test_face_align.py  test_fetch_logic.py  test_files.py  test_results.py  test_search_logic.py  test_select_logic.py  test_sidecar.py  test_throttle.py  test_urls.py  test_user_agent.py
